--- a/src/root.less
+++ b/src/root.less
@@ -1,6 +1,34 @@
-/* Copyright 2017 Quip */
+.news {
+  width: 400px;
+}
+.newsInput {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
 
-.hello {
-    display: flex;
-    justify-content: center;
+  input {
+    width: 80%;
+  }
+}
+
+.newsContainer {
+  width: 400px;
+  white-space: nowrap;
+  overflow: hidden;
+
+  &:not(:last-child) {
+    margin-bottom: 15px;
+  }
+
+  .truncate {
+    width: 400px;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #1ba2e3;
+  }
+
+  h4 a {
+    color: #1ba2e3;
+  }
 }
